SR-4677: avoid SIGSEGV if _dispatch_muxnote_create returns NULL

It is possible for _dispatch_muxnote_create to return NULL, this error
condition was not being handled in dispatch_unote_register leading to
an immediate SIGSEGV when it happened.